<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_switch"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_switch_traffic"/>
    
    <item
        android:id="@+id/action_3Day"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_3day"/>
    
    <item
        android:id="@+id/action_5Day"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_5day"/>
    
    <item
        android:id="@+id/action_other_weather"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_other_weather"/>

</menu>