<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_switch"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_switch_weather"/>
    
    <item
        android:id="@+id/action_auckland"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_auckland"/>
    
    <item
        android:id="@+id/action_nz_cities"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_nz_cities"/>
    
    <!-- <item
        android:id="@+id/action_northern"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_northern"/>
    <item
        android:id="@+id/action_southern"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_southern"/>
    <item
        android:id="@+id/action_north_western"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_north_western"/>
    <item
        android:id="@+id/action_upper_harbour"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_upper_harbour"/> -->
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->

</menu>